# aristotle-decision-crew

./: .env.example  DEPLOY-PERMANENT-STEPS.md  Dockerfile  LOCAL-TEST-STEPS.md  README.md  lambda_proxy.py  pyproject.toml  run_decision_crew.py  server.py
src/decision_crew/: crew.py  main.py
src/decision_crew/config/: agents.yaml  tasks.yaml
